# hm310p

./: .flake8  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  TODO  noxfile.py  pyproject.toml
docs/: conf.py
src/hm310p_cli/: console.py  hm310p.py  hm310p_constants.py  hm310p_regdefs.py
tests/: test_console.py
