[tool.poetry]
name = "hm310p-cli"
version = "0.1.0"
description = "Command line tool to control Hanmatek power supplies."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/5H3LL3H5/hm310p-cli"
repository = "https://github.com/5H3LL3H5/hm310p-cli"
keywords = ["hm305p", "hm310p", "hm305p-cli", "hm310p-cli"] 
authors = ["Christian Stenzel <christianstenzel@linux.com>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
coverage = {extras = ["toml"], version = "^5.3"}
pytest-cov = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hm310p-cli = "hm310p_cli.console:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["hm310p_cli"]

[tool.coverage.report]
show_missing = true
fail_under = 100
